infer/tests/codetoanalyze/objc/errors/frontend/compound_literal.c
../../../c/frontend/initialization/compound_literal.c